force-app/main/default/objects/ProfitLossSummary__c/ProfitLossSummary__c.object-meta.xml
<CustomObject>
    <label>ProfitLoss Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>PS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfitLoss Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>