force-app/main/default/objects/ProfitLossSummary__c/fields/BUSI_TYPE1__c.field-meta.xml
<CustomField>
    <fullName>BUSI_TYPE1__c</fullName>
    <label>BUSI_TYPE1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>