force-app/main/default/objects/ProfitLossSummary__c/fields/COMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_NAME__c</fullName>
    <label>COMPANY_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>