force-app/main/default/objects/ProfitLossSummary__c/fields/CONTRACT_01__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_01__c</fullName>
    <label>CONTRACT_01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>