force-app/main/default/objects/ProfitLossSummary__c/fields/CONTRACT_03__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_03__c</fullName>
    <label>CONTRACT_03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>