force-app/main/default/objects/ProfitLossSummary__c/fields/DEV_DEPT1__c.field-meta.xml
<CustomField>
    <fullName>DEV_DEPT1__c</fullName>
    <label>DEV_DEPT1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>