force-app/main/default/objects/ProfitLossSummary__c/fields/DEV_DEPT3__c.field-meta.xml
<CustomField>
    <fullName>DEV_DEPT3__c</fullName>
    <label>DEV_DEPT3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>