force-app/main/default/objects/ProfitLossSummary__c/fields/DEV_DEPT4__c.field-meta.xml
<CustomField>
    <fullName>DEV_DEPT4__c</fullName>
    <label>DEV_DEPT4</label>
    <length>20</length>
    <type>Text</type>
</CustomField>