force-app/main/default/objects/ProfitLossSummary__c/fields/OPPORTUNITY__c.field-meta.xml
<CustomField>
    <fullName>OPPORTUNITY__c</fullName>
    <label>OPPORTUNITY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>