force-app/main/default/objects/ProfitLossSummary__c/fields/OPROFIT_04__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_04__c</fullName>
    <label>OPROFIT_04</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>