force-app/main/default/objects/ProfitLossSummary__c/fields/OPROFIT_05__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_05__c</fullName>
    <label>OPROFIT_05</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>