force-app/main/default/objects/ProfitLossSummary__c/fields/OPROFIT_06__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_06__c</fullName>
    <label>OPROFIT_06</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>