force-app/main/default/objects/ProfitLossSummary__c/fields/ORIGIN_CUST__c.field-meta.xml
<CustomField>
    <fullName>ORIGIN_CUST__c</fullName>
    <label>ORIGIN_CUST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>