force-app/main/default/objects/ProfitLossSummary__c/fields/REVENUE_02__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_02__c</fullName>
    <label>REVENUE_02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>