force-app/main/default/objects/ProfitLossSummary__c/fields/REVENUE_03__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_03__c</fullName>
    <label>REVENUE_03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>