force-app/main/default/objects/ProfitLossSummary__c/fields/REVENUE_06__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_06__c</fullName>
    <label>REVENUE_06</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>