force-app/main/default/objects/ProfitLossSummary__c/fields/SALES_DEPT3__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPT3__c</fullName>
    <label>SALES_DEPT3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>