force-app/main/default/objects/ProfitLossSummary__c/fields/SALES_DEPTNAME4__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPTNAME4__c</fullName>
    <label>SALES_DEPTNAME4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>