force-app/main/default/objects/ProfitLossSummary__c/fields/SOLUTION_NAME__c.field-meta.xml
<CustomField>
    <fullName>SOLUTION_NAME__c</fullName>
    <label>SOLUTION_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>