force-app/main/default/objects/ProfitLossSummary__c/fields/STANDARD_CUSTNAME__c.field-meta.xml
<CustomField>
    <fullName>STANDARD_CUSTNAME__c</fullName>
    <label>STANDARD_CUSTNAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>